# KeepLearning

./: CMakeLists.txt  README.md  build.sh
helloworld/: helloword.cu
include/: common.cuh  common.h
include/cpu/: attention.h  matmul.h  softmax.h
include/cuda/: attention.cuh  matmul.cuh  reduce_sum.cuh  softmax.cuh
matmul/: matmul.cu  readme.md
ops/matmul/: CMakeLists.txt  matmul.cu  readme.md
ops/reduce/: reduce_sum.cu
ops/softmax/: softmax.cu
reduce/: readme.md  reduce_sum.cu
softmax/: readme.md  softmax.cu
src/: common.cpp  common.cu
src/ops/attention/: CMakeLists.txt  attention.cpp  attention.cu  main.cpp  main.cu  readme.md
src/ops/matmul/: CMakeLists.txt  main.cpp  main.cu  matmul.cpp  matmul.cu  readme.md
src/ops/reduce/: CMakeLists.txt  main.cu  readme.md  reduce_sum.cu
src/ops/softmax/: CMakeLists.txt  main.cpp  main.cu  readme.md  softmax.cpp  softmax.cu  test
test/ops/softmax/: CMakeLists.txt  main.cpp  main.cu  readme.md
utils/: detect_cuda_compute_capabilities.cu  helloword.cu  test
